﻿Version 2.0

- Process overhaul: load and apply RICO settings before game prefab initialisation by patching BuildingInfo.InitializePrefab(), instead of modifying post-initialisation
- Implement growables
- Add button to access RICO settings for from building info panels
- Update residential building household counts on load
- Overhaul building AIs, implementing separate (inheriting) AIs for growables and ploppables
- Generate standardised building preview images for thumbnail sprites
- Building preview (thumbnails and settings panel) overlays include name, level and size
- Replace default game tooltips with smaller ones with only relevant info
- Allow 'none' as valid UI catgegory, and explicitly default to that if no valid UI category can be found or guessed
- Remove error for zero workplaces for dummy service
- Fix automatic workplace allocation sometimes not correctly identifying current level in options editor
- Fix 'Leisure' and 'Tourism' tooltips being swapped around
- Standardise lighting for builiding preview renders
- Migrate to Harmony 2
- Remove redundant CalculateHomeCount Harmony patch
- Overhaul mod conflict checking mechanism and reporting
- Code cleanup


Version 1.3

- Add override for building levels on game load (only applies to buildings in LocalRICOSettings.xml)
- Add building list 'filter by settings' function
- Suppress errors for buildings that are deactivated
- Tweak settings window layout and widen options panel
- Tweak options panel level menu update on service and subservice changes
- Logging tweaks


Version 1.2.5

- Building level errors in local settings for single-level building categories are now quietly logged


Version 1.2.4

- Configuration errors are now clearly divided into fatal and non-fatal categories
- Non-fatal errors for author settings are now quietly logged and do not generate an alert
- Improve building level error checking and correction
- Improve feedback on whether errors are in local or author settings